--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
+    "bootstrap": "^5.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
+    "uswds": "^2.12.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
