Polish up events, add home event carousel
Change-Id: I75907cc086f85a44e7f12c591440f7fa1a4bfad6

--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,8 @@
             ],
             "scripts": [
               "node_modules/uswds/dist/js/uswds-init.min.js",
-              "node_modules/uswds/dist/js/uswds.min.js"
+              "node_modules/uswds/dist/js/uswds.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
           "configurations": {
