--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
+    "body-parser": "^1.19.0",
     "bootstrap": "^5.1.0",
+    "cookie-parser": "^1.4.5",
+    "debug": "^4.3.1",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "uswds": "^2.12.1",
