--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,6 +8,6 @@ steps:
 # Deploy container image to Cloud Run
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: gcloud
-  args: ['run', 'deploy', 'forest-city', '--image', 'gcr.io/forest-city-325620/forest-city:$COMMIT_SHA', '--region', 'us-east1', '--concurrency', '80', '--max-instances', '5', '--memory', '256Mi']
+  args: ['run', 'deploy', 'forest-city', '--image', 'gcr.io/forest-city-325620/forest-city:$COMMIT_SHA', '--region', 'us-east1', '--concurrency', '80', '--max-instances', '5', '--memory', '256Mi', ' --allow-unauthenticated']
 images:
 - gcr.io/forest-city-325620/forest-city:$COMMIT_SHA
