Get form submission working
Change-Id: If11328b02b00d0acba93a5d8d4b81b6620b16a9a

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,9 @@ services:
     build:
       context: ./
       dockerfile: ./Dockerfile
+    env_file:
+      - ./.env
+    command: nodemon bin/www
     volumes:
       - .:/usr/src/app
     ports:
