--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@angular/platform-browser": "~12.1.2",
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
+    "@google-cloud/secret-manager": "^3.10.1",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.0",
     "cookie-parser": "^1.4.5",
     "debug": "^4.3.1",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.6.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "uswds": "^2.12.1",
@@ -33,14 +35,17 @@
     "@angular-devkit/build-angular": "~12.1.2",
     "@angular/cli": "~12.1.2",
     "@angular/compiler-cli": "~12.1.2",
+    "@types/express": "^4.17.13",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "@types/nodemailer": "^6.4.4",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "nodemon": "^2.0.12",
     "typescript": "~4.3.2"
   }
 }
