--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,3 +11,5 @@ steps:
   args: ['run', 'deploy', 'forest-city', '--image', 'gcr.io/forest-city-325620/forest-city:$COMMIT_SHA', '--region', 'us-east1', '--concurrency', '80', '--max-instances', '5', '--memory', '256Mi']
 images:
 - gcr.io/forest-city-325620/forest-city:$COMMIT_SHA
+options:
+  logging: CLOUD_LOGGING_ONLY
