Set timeout, handle errors
Change-Id: I82735a94d2e31e1c3f269092219e6e08f7315472

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,7 +8,7 @@ steps:
 # Deploy container image to Cloud Run
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: gcloud
-  args: ['run', 'deploy', 'forest-city', '--image', 'gcr.io/forest-city-325620/forest-city:$COMMIT_SHA', '--region', 'us-east1', '--concurrency', '80', '--max-instances', '5', '--memory', '256Mi', '--service-account', 'cloud-run@forest-city-325620.iam.gserviceaccount.com']
+  args: ['run', 'deploy', 'forest-city', '--image', 'gcr.io/forest-city-325620/forest-city:$COMMIT_SHA', '--region', 'us-east1', '--concurrency', '80', '--max-instances', '5', '--memory', '256Mi', '--service-account', 'cloud-run@forest-city-325620.iam.gserviceaccount.com', '--timeout', '30']
 images:
 - gcr.io/forest-city-325620/forest-city:$COMMIT_SHA
 logsBucket: 'gs://forest-city-build-logs'
