--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cookie-parser": "^1.4.5",
     "debug": "^4.3.1",
     "express": "^4.17.1",
+    "mjml": "^4.10.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.6.3",
     "rxjs": "~6.6.0",
