--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "handlebars": "^4.7.7",
     "mjml": "^4.10.3",
     "morgan": "^1.10.0",
+    "node-mailjet": "^3.3.4",
     "nodemailer": "^6.6.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
