--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build && cat sitemap.template.xml | sed \"s/CURRENT_DATE/$(date \"+%Y-%m-%d\")/g\"",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -49,6 +49,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "nodemon": "^2.0.12",
+    "sitemap": "^7.0.0",
     "typescript": "~4.3.2"
   }
 }
