Save the sitemap
Change-Id: Ic537dab9981cc60af98c2d1e978a125b49dfe22d

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build && cat sitemap.template.xml | sed \"s/CURRENT_DATE/$(date \"+%Y-%m-%d\")/g\"",
+    "build": "ng build && cat sitemap.template.xml | sed \"s/CURRENT_DATE/$(date \"+%Y-%m-%d\")/g\" > sitemap.xml",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
