--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~12.1.2",
     "@angular/router": "~12.1.2",
     "@google-cloud/secret-manager": "^3.10.1",
+    "@googleapis/sheets": "^0.3.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.0",
     "cookie-parser": "^1.4.5",
