--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.2",
+    "@angular/cdk": "^13.0.0",
     "@angular/common": "~12.1.2",
     "@angular/compiler": "~12.1.2",
     "@angular/core": "~12.1.2",
@@ -28,6 +29,7 @@
     "handlebars": "^4.7.7",
     "mjml": "^4.10.3",
     "morgan": "^1.10.0",
+    "ng-gallery": "^5.1.1",
     "node-mailjet": "^3.0.5",
     "nodemailer": "^6.6.3",
     "rxjs": "~6.6.0",
