--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cookie-parser": "^1.4.5",
     "debug": "^4.3.1",
     "express": "^4.17.1",
+    "google-spreadsheet": "^3.2.0",
     "handlebars": "^4.7.7",
     "mjml": "^4.10.3",
     "morgan": "^1.10.0",
