--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "cookie-parser": "^1.4.5",
     "debug": "^4.3.1",
     "express": "^4.17.1",
+    "font-awesome": "^4.7.0",
     "google-spreadsheet": "^3.2.0",
+    "hammerjs": "^2.0.8",
     "handlebars": "^4.7.7",
     "mjml": "^4.10.3",
     "morgan": "^1.10.0",
