--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "morgan": "^1.10.0",
     "ng-gallery": "^5.1.1",
     "ngx-google-analytics": "^11.2.1",
+    "node": "^18.9.1",
     "node-mailjet": "^3.0.5",
     "nodemailer": "^6.6.3",
     "rxjs": "~6.6.0",
@@ -42,7 +43,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.1.2",
+    "@angular-devkit/build-angular": "^14.2.3",
     "@angular/cli": "~12.1.2",
     "@angular/compiler-cli": "~12.1.2",
     "@types/express": "^4.17.13",
