--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ chrome-profiler-events*.json
 .settings/
 *.sublime-workspace
 
+# Angular cache
+.angular
+
 # IDE - VSCode
 .vscode/*
 !.vscode/settings.json
